# web_python_04_

./: Dockerfile  main.py  message.html  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
flask-docker-app/: requirements.txt
flask-docker-app/env/: pyvenv.cfg
flask-docker-app/env/Scripts/: activate  activate.bat
storage/: data.json
